syntax = "proto3";

package did.v1;

import "google/api/annotations.proto";

option go_package = "fivi/gen/go/did/v1;did";

service DID {
  rpc RegisterURIMapping(DIDMappingRequest) returns (DIDMappingResponse) {
    option (google.api.http) = {
      post: "/api/did/v1/register"
      body: "*"
    };
  };

  rpc GetMessageToSign(MessageRequest) returns (MessageResponse) {
    option (google.api.http) = {
      post: "/api/did/v1/message/generate"
      body: "*"
    };
  };

  rpc VerifySignature(VerifySignatureRequest) returns (VerifySignatureResponse) {
    option (google.api.http) = {
      post: "/api/did/v1/signature/verify"
      body: "*"
    };
  };
}

message DIDMappingRequest {
  string did               = 1;
  string long_form_uri     = 2;
}

message DIDMappingResponse{
  string user_name = 1;
}

message VerifySignatureRequest {
  string did = 1;
  string jws = 2;
}

message VerifySignatureResponse {
  string jwt = 1;
}

message MessageRequest {
  string did = 1;
}

message MessageResponse {
  string message = 1;
}
